[package]
name = "call-counter"
version = "0.1.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Call Counter"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/call-counter"
repository = "https://github.com/VladasZ/call-counter"

[dependencies]
